--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "author": "Eric Coleman",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@testing-library/dom": "^7.9.0",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.6",
+    "@types/jest": "^25.2.3",
+    "babel-jest": "^26.0.1",
+    "jest": "^26.0.1",
     "parcel-bundler": "^1.12.4",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.3"
   },
   "dependencies": {
@@ -15,6 +25,8 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "test": "jest",
+    "test:watch": "jest --watch"
   }
 }
